@@ -9,10 +9,17 @@ developed by
 &copy; 2003	
 
 
+## How to run the examples
 
-The Ddpdl example scripts are located in the './DpdlLibs/' folder.
+The Dpdl example scripts are located in the './DpdlLibs/' folder and can be executed via:
 
-To execute the Dpdl scripts enter the **`DpdlClient`** console application and use the '-load' command as follows:
+1) with the **`DpdlClient`** console application
+2) or directly via the '-load' parameter at startup
+3) or using the API function call DPDLAPI_execCode(..).
+
+The script path per default configuration need to be relative to the './DpdlLibs/' folder
+
+### 1) **`DpdlClient`** console application
 
 ```
 -load
@@ -20,11 +27,20 @@ enter the Dpdl script name to execute:
 arraylistExample.h @TEST1
 ```
 
-Dpdl scripts can also be run directly via the '-load' parameter at startup, or via the API function call DPDLAPI_execCode(..).
+### 2) At startup with the '-load' command
 
-A set of examples/Tests can be found in the script './DpdlLibs/dpdlLibExamples.h',
-where different Tests can be executed individually via tagged execution, by supplying the @TAG attribute along with the filename.
-i.e. arraylistExample.h @TEST1
+```
+java --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED -jar DpdlEngine_V1.0_release.jar -load test/testArray.h
+```
+Note: On newer versions of java (from Oracle), in order to access specific java 'modules' within Dpdl, you may need to enable them with the option '--add-opens'
+
+### 3) Using the Dpdl API
+
+```python
+println("executing dpdl script...")
+int s = DPDLAPI_execCode("mydpdlscript.h")
+println("status: " + s)
+```
 
 The Dpdl sample scripts and Dpdl sample applications published on this repository are released under the MIT License.
 
